@@ -1,4 +1,7 @@
 Oct 21, 2002: Alex Burger <alex@users.sourceforge dot net>
+- Cleaned up new arguments editor
+
+Oct 21, 2002: Alex Burger <alex@users.sourceforge dot net>
 - Added new arguments editor - new tab for Q3, UT, UT2003
 
 Oct 20, 2002: Alex Burger <alex@users.sourceforge dot net>
